fixes: set `overflow: hidden` and some js optimizations

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -124,7 +124,7 @@ button.sc_btns:hover:not(button.sc_btns) {
     align-items: center;
     font-family: Space Grotesk, monospace;
     display: flex;
-    overflow: auto;
+    overflow: hidden;
 }
 
 .greet {
